# PaperclipMaxxer

./: .env.example  .gitignore  README.md  pyproject.toml
src/paperclipmaxxer/: __init__.py  bot.py  config.py  context.py  memory.py  openrouter.py
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
